2007-05-20  Neil J Patel  <njpatel@gmail.com>

	* Makefile.am:
	* avant-launchers/Makefile.am:
	* avant-launchers/avant-launchers.glade:
	* avant-launchers/avant-launchers.in.py:
	* configure.in:
	* src/awn-task-manager.c: (awn_task_manger_refresh_launchers):
	* src/main.c: (launcher_function), (create_menu):
	Added a basic GUI for configuring launcher positions. Accessable
	through the right-click menu on any free part of the bar.

2007-05-19  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-task-manager.c: (_task_manager_drag_data_recieved),
	(awn_task_manger_refresh_launchers), (awn_task_manager_init):
	* src/awn-task.c: (awn_task_get_item):
	* src/awn-task.h:
	Changing the position or launchers in the gconf menu will
	automatically update the positions of the launchers in Awn.

2007-05-19  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-bar.c: (glass_engine), (render):
	* src/awn-title.c: (render):
	Merged patch by Andrea Cimitan which fixes some cairo drawing.

2007-05-19  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-window.c: (awn_window_new):
	Merged patch by Ado Papas whihc should fix the issues when the window
	manager ignores Awn's requests to activate windows etc.

2007-05-13  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-gconf.c: (awn_gconf_new):
	* src/awn-task.c: (_task_choose_custom_icon),
	(on_change_icon_clicked), (_task_show_prefs):
	* src/awn-x.c: (awn_x_get_icon_for_window):
	Brand new custom icon interface which actually works :).

2007-05-12  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-task-manager.c: (awn_task_manager_set_task_icon_by_xid),
	(awn_task_manager_unset_task_icon_by_xid),
	(awn_task_manager_set_progress_by_xid),
	(awn_task_manager_set_info_by_xid),
	(awn_task_manager_unset_info_by_xid):
	* src/awn-x.c: (awn_x_get_icon):
	* src/inlinepixbufs.h:
	Use own own default icons for windows without icon.

2007-05-12  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-task-manager.c:
	(awn_task_manager_add_task_menu_item_by_name),