@@ -1,3 +1,8 @@
+2007-05-22  Neil J Patel  <njpatel@gmail.com>
+
+	* avant-launchers/avant-launchers.in.py:
+	Fixed error when it can't find desktop files.
+
 2007-05-20  Neil J Patel  <njpatel@gmail.com>
 
 	* Makefile.am:
